# model-router

./: .gitignore  README.md  analytics.db  changelog.md  package-lock.json  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_usage.py  custom_strategy.py
src/model_router/: __init__.py
src/model_router/analytics/: __init__.py  aggregator.py  interfaces.py  sqlite_repository.py  tracker.py
src/model_router/core/: __init__.py  config.py  container.py  middleware.py  router.py
src/model_router/domain/: __init__.py  exceptions.py  interfaces.py  models.py
src/model_router/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
src/model_router/routing/: __init__.py  engine.py  estimator.py  selector.py
src/model_router/routing/strategies/: balanced_strategy.py  base.py  cost_strategy.py  latency_strategy.py  quality_strategy.py
src/model_router/utils/: __init__.py  cost_calculator.py  retry.py  token_counter.py  validators.py
tests/integration/: test_providers.py  test_router_integration.py
tests/unit/: test_analytics_aggregator.py  test_container.py  test_estimator.py  test_middleware.py  test_model_selector.py  test_models.py  test_provider_factory.py  test_providers_base.py  test_router.py  test_router_config.py  test_routing_engine.py  test_sqlite_repository.py  test_strategies.py  test_usage_tracker.py  test_utils.py
